--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -629,10 +629,13 @@
                                         <a asp-controller="home" asp-action="index">Home</a>
                                     </li>
                                     <li>
-                                        <a href="shop-banner-sidebar.html">Shop</a>
+                                        <a asp-controller="product" asp-action="index">Shop</a>
                                     </li>
                                      <li>
                                         <a asp-controller="about" asp-action="index">About Us</a>
+                                    </li>
+                                     <li>
+                                        <a asp-controller="contact" asp-action="index">Contact Us</a>
                                     </li>
                                       @*<li>
                                         <a href="blog.html">Blog</a>
