--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -394,13 +394,23 @@
                                 </div>
                             </nav>
                             <div class="product-wrapper row cols-md-3 cols-sm-2 cols-2">
-                                <div class="product-wrap">
+                                @foreach (Product product in Model)
+                                {
+                                     <div class="product-wrap">
                                     <div class="product text-center">
                                         <figure class="product-media">
-                                            <a asp-controller="product" asp-action="detail" asp-route-id="1">
-                                                <img src="~/assets/images/shop/1.jpg" alt="Product" width="300"
+                                            <a asp-controller="product" asp-action="detail" asp-route-id="@product.ID">
+                                                <img src="~/assets/images/shop/@product.MainImage" alt="Product" width="300"
+                                                    height="338" />
+                                                 <img src="~/assets/images/shop/@product.HoverImage" alt="Product" width="300"
                                                     height="338" />
                                             </a>
+                                           @*  <div class="product-countdown-container">
+                                                <div class="product-countdown countdown-compact" data-until="2021, 9, 9"
+                                                    data-format="DHMS" data-compact="false"
+                                                    data-labels-short="Days, Hours, Mins, Secs">
+                                                    00:00:00:00</div>
+                                            </div>*@
                                             <div class="product-action-horizontal">
                                                 <a href="#" class="btn-product-icon btn-cart w-icon-cart"
                                                     title="Add to cart"></a>
@@ -408,7 +418,7 @@
                                                     title="Wishlist"></a>
                                                 <a href="#" class="btn-product-icon btn-compare w-icon-compare"
                                                     title="Compare"></a>
-                                                <a href="#" class="btn-product-icon btn-quickview w-icon-search"
+                                                <a asp-controller="product" asp-action="DetailForModal" asp-route-id="@product.ID" class="btn-product-icon btn-quickview w-icon-search product__modal"
                                                     title="Quick View"></a>
                                             </div>
                                         </figure>
@@ -417,7 +427,7 @@
                                                 <a href="shop-banner-sidebar.html">Electronics</a>
                                             </div>
                                             <h3 class="product-name">
-                                                <a href="product-default.html">3D Television</a>
+                                                <a href="product-default.html">@product.Name</a>
                                             </h3>
                                             <div class="ratings-container">
                                                 <div class="ratings-full">
@@ -428,63 +438,25 @@
                                             </div>
                                             <div class="product-pa-wrapper">
                                                 <div class="product-price">
-                                                    $220.00 - $230.00
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="product-wrap">
-                                    <div class="product text-center">
-                                        <figure class="product-media">
-                                            <a href="product-default.html">
-                                                <img src="~/assets/images/shop/2-1.jpg" alt="Product" width="300"
-                                                    height="338" />
-                                                <img src="~/assets/images/shop/2-2.jpg" alt="Product" width="300"
-                                                    height="338" />
-                                            </a>
-                                            <div class="product-countdown-container">
-                                                <div class="product-countdown countdown-compact" data-until="2021, 9, 9"
-                                                    data-format="DHMS" data-compact="false"
-                                                    data-labels-short="Days, Hours, Mins, Secs">
-                                                    00:00:00:00</div>
-                                            </div>
-                                            <div class="product-action-horizontal">
-                                                <a href="#" class="btn-product-icon btn-cart w-icon-cart"
-                                                    title="Add to cart"></a>
-                                                <a href="#" class="btn-product-icon btn-wishlist w-icon-heart"
-                                                    title="Wishlist"></a>
-                                                <a href="#" class="btn-product-icon btn-compare w-icon-compare"
-                                                    title="Compare"></a>
-                                                <a href="#" class="btn-product-icon btn-quickview w-icon-search"
-                                                    title="Quick View"></a>
-                                            </div>
-                                        </figure>
-                                        <div class="product-details">
-                                            <div class="product-cat">
-                                                <a href="shop-banner-sidebar.html">Electronics</a>
-                                            </div>
-                                            <h3 class="product-name">
-                                                <a href="product-default.html">Alarm Clock With Lamp</a>
-                                            </h3>
-                                            <div class="ratings-container">
-                                                <div class="ratings-full">
-                                                    <span class="ratings" style="width: 100%;"></span>
-                                                    <span class="tooltiptext tooltip-top"></span>
-                                                </div>
-                                                <a href="product-default.html" class="rating-reviews">(10 reviews)</a>
-                                            </div>
-                                            <div class="product-pa-wrapper">
-                                                <div class="product-price">
-                                                    <ins class="new-price">$30.00</ins><del
-                                                        class="old-price">$60.00</del>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                                                @if(product.DiscountedPrice > 0)
+                                                {
+                                                    <ins class="new-price">$30.00</ins>
+                                                    <del class="old-price">$60.00</del>
+                                                }
+                                                else
+                                                {
+                                                    <del class="old-price">$60.00</del>
+                                                }
 
+                                                    @*@product.DiscountedPrice > 0 ?  <ins class="new-price">$30.00</ins> <del class="old-price">$60.00</del> 
+                                                    :  <del class="old-price">$60.00</del>*@
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                }
+                            </div>
                             <div class="toolbox toolbox-pagination justify-content-between">
                                 <p class="showing-info mb-2 mb-sm-0">
                                     Showing<span>1-12 of 60</span>Products
