Updated product modal

--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model List<Product>
+
 @{
     ViewData["Title"] = "Index";
 }
@@ -21,7 +22,7 @@
                 <div class="container">
                     <!-- Start of Shop Banner -->
                     <div class="shop-default-banner banner d-flex align-items-center mb-5 br-xs"
-                        style="background-image: url(~/assets/images/shop/banner1.jpg); background-color: #FFC74E;">
+                       style="background-image: url('/assets/images/shop/banner1.jpg')"> >
                         <div class="banner-content">
                             <h4 class="banner-subtitle font-weight-bold">Accessories Collection</h4>
                             <h3 class="banner-title text-white text-uppercase font-weight-bolder ls-normal">Smart Wrist
