--- a/Views/Shared/_ProductModalPartial.cshtml
+++ b/Views/Shared/_ProductModalPartial.cshtml
@@ -8,8 +8,8 @@
                 {
                     <div class="swiper-slide">
                                 <figure class="product-image">
-                                    <img src="~/assets/images/products/popup/@item.Image"
-                                        data-zoom-image="~/assets/images/products/popup/@item.Image"
+                                    <img src="~/assets/images/products/default/@item.Image"
+                                        data-zoom-image="~/assets/images/products/default/@item.Image"
                                         alt="Water Boil Black Utensil" width="800" height="900">
                                 </figure>
                             </div>
@@ -28,7 +28,7 @@
                         {
                             <div class="product-thumbs swiper-wrapper row cols-4 gutter-sm">
                                         <div class="product-thumb swiper-slide">
-                                            <img src="~/assets/images/products/popup/@item.Image" alt="Product Thumb" width="103"
+                                            <img src="~/assets/images/shop/@item.Image" alt="Product Thumb" width="103"
                                                 height="116">
                                         </div>
                             </div>
@@ -38,7 +38,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 overflow-hidden p-relative">
+<div class="col-md-6 overflow-hidden p-relative">
                 <div class="product-details scrollable pl-0">
                     <h2 class="product-title">@Model.Name</h2>
                     <div class="product-bm-wrapper">
